--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /[Mm]emoryCaptures/
 /app
 app_BurstDebugInformation_DoNotShip
+/ARFoundationRemoteCompanionApp/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -59,4 +60,5 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+ARFoundationRemoteInstaller
 
